--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 Crystals Collector Game
             </h1>
         </div>
-        <div class="row">
+        <div class="row row-flex">
             <div class="col-md-1">
                 <!--empty-->
             </div>
@@ -49,11 +49,11 @@
                 <!--empty-->
             </div>
             <div class="col-md-4 border">
-                <div class="row pt-4">
+                <div class="row row-flex pt-4">
                     <div class="col-md-6">
                         <div class="card text-center">
                             <h3>
-                                Random Number
+                                Target Score
                             </h3>
                             <div id="compRandom">
                                 <!--computer random number-->
@@ -66,7 +66,7 @@
                     <div class="col-md-6">
                         <div class="card text-center">
                             <h3>
-                                Your Number
+                                Your Score
                             </h3>
                             <div id="userNum">
                                 <!--user total sum-->
@@ -77,9 +77,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="row pt-4">
+                <div class="row row-flex pt-4">
                     <div class="col">
-                        <div class="row">
+                        <div class="row row-flex">
                             <div class="col-md-3">
                                 <img class="img-fluid" src="assets/images/jem1.png" id="jem1" alt="jewel 1" title="click jewel 1" />
                             </div>
@@ -95,7 +95,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row pt-4">
+                <div class="row row-flex pt-4">
                     <div class="col-md-6">
                         <div class="card text-center">
                            <h3>
