cleaned up some display issues

--- a/index.html
+++ b/index.html
@@ -26,23 +26,24 @@
                 <!--empty-->
             </div>
             <div class="col-md-4">
-                <h2>
+                <h3>
                     Instructions:
-                </h2>
+                </h3>
+                <hr />
                 <p>
-                    You will be given a random number at the start of the game.
+                    You will be given a random number at the start of the game listed in Target.
                 </p>
                 <p>
                     There are four crystals to the right.  By clicking on a crystal you will add a specific amount of point to your total socre.
                 </p>
                 <p>
-                    You win the game by matching your total score to random number, you lose the game if your total score goes above the random number
+                    You win the game by matching your total score to random number target, you lose the game if your total score goes above the random number target.
                 </p>
                 <p>
                     The value of each crystal is hidden from you until you click on it.
                 </p>
                 <p>
-                    Each time when the game starts, the game will change the values of each crystal
+                    Each time when the game starts, the game will change the values of each crystal.
                 </p>
             </div>
             <div class="col-md-1">
@@ -53,7 +54,7 @@
                     <div class="col-md-6">
                         <div class="card text-center">
                             <h3>
-                                Target Score
+                                Target
                             </h3>
                             <div id="compRandom">
                                 <!--computer random number-->
@@ -66,7 +67,7 @@
                     <div class="col-md-6">
                         <div class="card text-center">
                             <h3>
-                                Your Score
+                                Total
                             </h3>
                             <div id="userNum">
                                 <!--user total sum-->
@@ -87,10 +88,10 @@
                                 <img class="img-fluid" src="assets/images/jem2.png" id="jem2" alt="jewel 2" title="click jewel 2" />
                             </div>
                             <div class="col-md-3">
-                                <img class="img-fluid" src="assets/images/jem3.png" id="jem3" alt="jewel 2" title="click jewel 2" />
+                                <img class="img-fluid" src="assets/images/jem3.png" id="jem3" alt="jewel 3" title="click jewel 3" />
                             </div>
                             <div class="col-md-3">
-                                <img class="img-fluid" src="assets/images/jem4.png" id="jem4" alt="jewel 2" title="click jewel 2" />
+                                <img class="img-fluid" src="assets/images/jem4.png" id="jem4" alt="jewel 4" title="click jewel 4" />
                             </div>
                         </div>
                     </div>
