added more flair

--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
     <title>Crystals Collector - Ruben Ruiz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--reset all styles-->
-    <link rel="stylesheet" type="text/css" media="screen" href="/assets/css/reset.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css" />
+    <!--google font-->
+    <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative" rel="stylesheet">
     <!--bootstrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!--my styles-->
-    <link rel="stylesheet" type="text/css" media="screen" href="/assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
     <!--logic-->
-    <script src="/assets/javascript/game.js"></script>
+    <script src="assets/javascript/game.js"></script>
 </head>
 <body>
     <div class="container pb-4 pt-4 mt-5 border">
-        <div class="jumbotron text-center">
+        <div class="jumbotron">
             <h1>
                 Crystals Collector Game
             </h1>
