--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="col-md-1">
                 <!--empty-->
             </div>
-            <div class="col-md-4 border">
+            <div class="col-md-4">
                 <div class="row row-flex pt-4">
                     <div class="col-md-6">
                         <div class="card text-center">
