Fixed logic to get the game to pass a win however reset function still need work

--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
     <!--my styles-->
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-    <!--logic-->
-    <script src="assets/javascript/game.js"></script>
 </head>
 <body>
     <div class="container pb-4 pt-4 mt-5 border">
@@ -37,7 +35,7 @@
                     You will be given a random number at the start of the game listed in Target.
                 </p>
                 <p>
-                    There are four crystals to the right.  By clicking on a crystal you will add a specific amount of point to your total socre.
+                    There are four crystals to the right.  By clicking on a crystal you will add a specific amount of point to your total score.
                 </p>
                 <p>
                     You win the game by matching your total score to random number target, you lose the game if your total score goes above the random number target.
@@ -85,16 +83,16 @@
                     <div class="col">
                         <div class="row row-flex">
                             <div class="col-md-3">
-                                <img class="img-fluid jem" src="assets/images/jem1.png" id="jem1" alt="jewel 1" title="click jewel 1" />
+                                <img class="img-fluid jem" src="assets/images/jem1.png" alt="jewel 1" title="click jewel 1" />
                             </div>
                             <div class="col-md-3">
-                                <img class="img-fluid jem" src="assets/images/jem2.png" id="jem2" alt="jewel 2" title="click jewel 2" />
+                                <img class="img-fluid jem" src="assets/images/jem2.png" alt="jewel 2" title="click jewel 2" />
                             </div>
                             <div class="col-md-3">
-                                <img class="img-fluid jem" src="assets/images/jem3.png" id="jem3" alt="jewel 3" title="click jewel 3" />
+                                <img class="img-fluid jem" src="assets/images/jem3.png" alt="jewel 3" title="click jewel 3" />
                             </div>
                             <div class="col-md-3">
-                                <img class="img-fluid jem" src="assets/images/jem4.png" id="jem4" alt="jewel 4" title="click jewel 4" />
+                                <img class="img-fluid jem" src="assets/images/jem4.png" alt="jewel 4" title="click jewel 4" />
                             </div>
                         </div>
                     </div>
@@ -148,5 +146,7 @@
             </div>
         </div>
     </div>
+     <!--logic-->
+     <script src="assets/javascript/game.js"></script>
 </body>
 </html>
