fixed logic, created new functions for game and logic

--- a/index.html
+++ b/index.html
@@ -101,8 +101,9 @@
                     <div class="col">
                         <div class="card text-center">
                             <h3>
-                                Game Status
+                                Game Status:
                             </h3>
+                            <hr />
                             <div id="status">
                                 <!--end game result-->
                                 <h3>
