fixed yet more grammar

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     You will be given a random number at the start of the game listed in Target.
                 </p>
                 <p>
-                    There are four crystals to the right.  By clicking on a crystal you will add a specific amount of point to your total score.
+                    There are four crystals to the right.  By clicking on a crystal you will add a specific amount of points to your total score.
                 </p>
                 <p>
                     You win the game by matching your total score to random number target, you lose the game if your total score goes above the random number target.
