--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Crystals Collector - Ruben Ruiz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--favicons!-->
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/images/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
     <!--reset all styles-->
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css" />
     <!--google font-->
@@ -16,6 +20,15 @@
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div>
+        <!--audio files-->
+        <audio id="win">
+            <source src="assets/sounds/win.mp3" type="audio/mpeg">
+        </audio>
+        <audio id="lost">
+            <source src="assets/sounds/lost.mp3" type="audio/mpeg">
+        </audio>
+    </div>
     <div class="container pb-4 pt-4 mt-5 border">
         <div class="jumbotron">
             <h1>
